[gd_scene load_steps=2 format=2]

[ext_resource path="res://lobby.gd" type="Script" id=1]

[node name="Lobby" type="Control"]
anchor_right = 1.0
anchor_bottom = 1.0
size_flags_horizontal = 2
size_flags_vertical = 2
script = ExtResource( 1 )

[node name="LoginScreen" type="PanelContainer" parent="."]
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
margin_left = -344.0
margin_top = -121.0
margin_right = 344.0
margin_bottom = 121.0

[node name="MarginContainer" type="MarginContainer" parent="LoginScreen"]
margin_left = 7.0
margin_top = 7.0
margin_right = 681.0
margin_bottom = 235.0
custom_constants/margin_right = 20
custom_constants/margin_top = 5
custom_constants/margin_left = 20
custom_constants/margin_bottom = 5

[node name="VBoxContainer" type="VBoxContainer" parent="LoginScreen/MarginContainer"]
margin_left = 20.0
margin_top = 5.0
margin_right = 654.0
margin_bottom = 223.0
custom_constants/separation = 20

[node name="TitleLabel" type="Label" parent="LoginScreen/MarginContainer/VBoxContainer"]
margin_right = 634.0
margin_bottom = 14.0
text = "Login"
align = 1

[node name="ErrorLabel" type="Label" parent="LoginScreen/MarginContainer/VBoxContainer"]
margin_top = 34.0
margin_right = 634.0
margin_bottom = 48.0
custom_colors/font_color = Color( 0.819608, 0.290196, 0.290196, 1 )
align = 1

[node name="GridContainer" type="GridContainer" parent="LoginScreen/MarginContainer/VBoxContainer"]
margin_top = 68.0
margin_right = 634.0
margin_bottom = 178.0
rect_min_size = Vector2( 0, 110 )
size_flags_vertical = 3
columns = 2

[node name="EmailLabel" type="Label" parent="LoginScreen/MarginContainer/VBoxContainer/GridContainer"]
margin_top = 5.0
margin_right = 315.0
margin_bottom = 19.0
size_flags_horizontal = 3
text = "Email:"

[node name="EmailField" type="LineEdit" parent="LoginScreen/MarginContainer/VBoxContainer/GridContainer"]
margin_left = 319.0
margin_right = 634.0
margin_bottom = 24.0
size_flags_horizontal = 3

[node name="UsernameLabel" type="Label" parent="LoginScreen/MarginContainer/VBoxContainer/GridContainer" groups=["username_field"]]
visible = false
margin_top = 33.0
margin_right = 315.0
margin_bottom = 47.0
text = "Username:"

[node name="UsernameField" type="LineEdit" parent="LoginScreen/MarginContainer/VBoxContainer/GridContainer" groups=["username_field"]]
visible = false
margin_top = 28.0
margin_right = 315.0
margin_bottom = 52.0

[node name="PasswordLabel" type="Label" parent="LoginScreen/MarginContainer/VBoxContainer/GridContainer"]
margin_top = 33.0
margin_right = 315.0
margin_bottom = 47.0
text = "Password:"

[node name="PasswordField" type="LineEdit" parent="LoginScreen/MarginContainer/VBoxContainer/GridContainer"]
margin_left = 319.0
margin_top = 28.0
margin_right = 634.0
margin_bottom = 52.0
secret = true

[node name="Control" type="Control" parent="LoginScreen/MarginContainer/VBoxContainer/GridContainer"]
margin_top = 56.0
margin_right = 315.0
margin_bottom = 106.0

[node name="CreateAccountCheckbox" type="CheckBox" parent="LoginScreen/MarginContainer/VBoxContainer/GridContainer"]
margin_left = 319.0
margin_top = 82.0
margin_right = 634.0
margin_bottom = 106.0
size_flags_vertical = 10
text = "Create account"

[node name="LoginButton" type="Button" parent="LoginScreen/MarginContainer/VBoxContainer"]
margin_left = 588.0
margin_top = 198.0
margin_right = 634.0
margin_bottom = 218.0
size_flags_horizontal = 8
text = "Login"

[node name="JoinScreen" type="PanelContainer" parent="."]
visible = false
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
margin_left = -344.0
margin_top = -127.5
margin_right = 344.0
margin_bottom = 127.5

[node name="MarginContainer" type="MarginContainer" parent="JoinScreen"]
margin_left = 7.0
margin_top = 7.0
margin_right = 681.0
margin_bottom = 248.0
custom_constants/margin_right = 20
custom_constants/margin_top = 5
custom_constants/margin_left = 20
custom_constants/margin_bottom = 20

[node name="VBoxContainer" type="VBoxContainer" parent="JoinScreen/MarginContainer"]
margin_left = 20.0
margin_top = 5.0
margin_right = 654.0
margin_bottom = 221.0
custom_constants/separation = 20

[node name="TitleLabel" type="Label" parent="JoinScreen/MarginContainer/VBoxContainer"]
margin_right = 634.0
margin_bottom = 14.0
text = "Join"
align = 1

[node name="ErrorLabel" type="Label" parent="JoinScreen/MarginContainer/VBoxContainer"]
margin_top = 34.0
margin_right = 634.0
margin_bottom = 48.0
custom_colors/font_color = Color( 0.819608, 0.290196, 0.290196, 1 )
align = 1

[node name="CreateMatchContainer" type="HBoxContainer" parent="JoinScreen/MarginContainer/VBoxContainer"]
margin_top = 68.0
margin_right = 634.0
margin_bottom = 88.0

[node name="Label" type="Label" parent="JoinScreen/MarginContainer/VBoxContainer/CreateMatchContainer"]
margin_top = 3.0
margin_right = 560.0
margin_bottom = 17.0
size_flags_horizontal = 3
text = "Create new match"

[node name="CreateMatchButton" type="Button" parent="JoinScreen/MarginContainer/VBoxContainer/CreateMatchContainer" groups=["join_button"]]
margin_left = 564.0
margin_right = 634.0
margin_bottom = 20.0
rect_min_size = Vector2( 70, 0 )
text = "Create"

[node name="JoinMatchContainer" type="HBoxContainer" parent="JoinScreen/MarginContainer/VBoxContainer"]
margin_top = 108.0
margin_right = 634.0
margin_bottom = 132.0

[node name="Label" type="Label" parent="JoinScreen/MarginContainer/VBoxContainer/JoinMatchContainer"]
margin_top = 5.0
margin_right = 150.0
margin_bottom = 19.0
rect_min_size = Vector2( 150, 0 )
size_flags_horizontal = 3
text = "Join match (Match ID): "

[node name="JoinMatchField" type="LineEdit" parent="JoinScreen/MarginContainer/VBoxContainer/JoinMatchContainer"]
margin_left = 154.0
margin_right = 454.0
margin_bottom = 24.0
rect_min_size = Vector2( 300, 0 )
size_flags_horizontal = 3

[node name="Control" type="Control" parent="JoinScreen/MarginContainer/VBoxContainer/JoinMatchContainer"]
margin_left = 458.0
margin_right = 560.0
margin_bottom = 24.0
size_flags_horizontal = 3

[node name="JoinMatchButton" type="Button" parent="JoinScreen/MarginContainer/VBoxContainer/JoinMatchContainer" groups=["join_button"]]
margin_left = 564.0
margin_right = 634.0
margin_bottom = 24.0
rect_min_size = Vector2( 70, 0 )
text = "Join"

[node name="JoinNamedMatchContainer" type="HBoxContainer" parent="JoinScreen/MarginContainer/VBoxContainer"]
margin_top = 152.0
margin_right = 634.0
margin_bottom = 176.0

[node name="Label" type="Label" parent="JoinScreen/MarginContainer/VBoxContainer/JoinNamedMatchContainer"]
margin_top = 5.0
margin_right = 150.0
margin_bottom = 19.0
rect_min_size = Vector2( 150, 0 )
size_flags_horizontal = 3
text = "Join match (Named): "

[node name="JoinNamedMatchField" type="LineEdit" parent="JoinScreen/MarginContainer/VBoxContainer/JoinNamedMatchContainer"]
margin_left = 154.0
margin_right = 454.0
margin_bottom = 24.0
rect_min_size = Vector2( 300, 0 )
size_flags_horizontal = 3

[node name="Control" type="Control" parent="JoinScreen/MarginContainer/VBoxContainer/JoinNamedMatchContainer"]
margin_left = 458.0
margin_right = 560.0
margin_bottom = 24.0
size_flags_horizontal = 3

[node name="JoinNamedMatchButton" type="Button" parent="JoinScreen/MarginContainer/VBoxContainer/JoinNamedMatchContainer" groups=["join_button"]]
margin_left = 564.0
margin_right = 634.0
margin_bottom = 24.0
rect_min_size = Vector2( 70, 0 )
text = "Join"

[node name="MatchmakingContainer" type="HBoxContainer" parent="JoinScreen/MarginContainer/VBoxContainer"]
margin_top = 196.0
margin_right = 634.0
margin_bottom = 216.0

[node name="Label" type="Label" parent="JoinScreen/MarginContainer/VBoxContainer/MatchmakingContainer"]
margin_top = 3.0
margin_right = 560.0
margin_bottom = 17.0
size_flags_horizontal = 3
text = "Find match"

[node name="FindMatchButton" type="Button" parent="JoinScreen/MarginContainer/VBoxContainer/MatchmakingContainer" groups=["join_button"]]
margin_left = 564.0
margin_right = 634.0
margin_bottom = 20.0
rect_min_size = Vector2( 70, 0 )
text = "Find"

[node name="PlayersScreen" type="PanelContainer" parent="."]
visible = false
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
margin_left = -328.5
margin_top = -177.5
margin_right = 328.5
margin_bottom = 177.5
size_flags_horizontal = 2
size_flags_vertical = 2

[node name="MarginContainer" type="MarginContainer" parent="PlayersScreen"]
margin_left = 7.0
margin_top = 7.0
margin_right = 650.0
margin_bottom = 348.0
custom_constants/margin_right = 20
custom_constants/margin_top = 20
custom_constants/margin_left = 20
custom_constants/margin_bottom = 20

[node name="VBoxContainer" type="VBoxContainer" parent="PlayersScreen/MarginContainer"]
margin_left = 20.0
margin_top = 20.0
margin_right = 623.0
margin_bottom = 321.0
custom_constants/separation = 20

[node name="HBoxContainer" type="HBoxContainer" parent="PlayersScreen/MarginContainer/VBoxContainer"]
margin_right = 603.0
margin_bottom = 24.0

[node name="Label" type="Label" parent="PlayersScreen/MarginContainer/VBoxContainer/HBoxContainer"]
margin_top = 5.0
margin_right = 66.0
margin_bottom = 19.0
text = "Match ID: "

[node name="MatchIdField" type="LineEdit" parent="PlayersScreen/MarginContainer/VBoxContainer/HBoxContainer"]
margin_left = 70.0
margin_right = 603.0
margin_bottom = 24.0
size_flags_horizontal = 3
editable = false

[node name="Label" type="Label" parent="PlayersScreen/MarginContainer/VBoxContainer"]
margin_top = 44.0
margin_right = 116.0
margin_bottom = 58.0
size_flags_horizontal = 2
size_flags_vertical = 0
text = "Awaiting Players..."

[node name="List" type="ItemList" parent="PlayersScreen/MarginContainer/VBoxContainer"]
margin_top = 78.0
margin_right = 603.0
margin_bottom = 261.0
size_flags_horizontal = 3
size_flags_vertical = 3

[node name="Start" type="Button" parent="PlayersScreen/MarginContainer/VBoxContainer"]
margin_left = 274.0
margin_top = 281.0
margin_right = 328.0
margin_bottom = 301.0
size_flags_horizontal = 4
size_flags_vertical = 0
text = "START!"

[node name="ErrorDialog" type="AcceptDialog" parent="."]
margin_right = 55.0
margin_bottom = 58.0
size_flags_horizontal = 2
size_flags_vertical = 2

[connection signal="toggled" from="LoginScreen/MarginContainer/VBoxContainer/GridContainer/CreateAccountCheckbox" to="." method="_on_CreateAccountCheckbox_toggled"]
[connection signal="pressed" from="LoginScreen/MarginContainer/VBoxContainer/LoginButton" to="." method="_on_LoginButton_pressed"]
[connection signal="pressed" from="JoinScreen/MarginContainer/VBoxContainer/CreateMatchContainer/CreateMatchButton" to="." method="_on_CreateMatchButton_pressed"]
[connection signal="pressed" from="JoinScreen/MarginContainer/VBoxContainer/JoinMatchContainer/JoinMatchButton" to="." method="_on_JoinMatchButton_pressed"]
[connection signal="pressed" from="JoinScreen/MarginContainer/VBoxContainer/JoinNamedMatchContainer/JoinNamedMatchButton" to="." method="_on_JoinNamedMatchButton_pressed"]
[connection signal="pressed" from="JoinScreen/MarginContainer/VBoxContainer/MatchmakingContainer/FindMatchButton" to="." method="_on_FindMatchButton_pressed"]
[connection signal="pressed" from="PlayersScreen/MarginContainer/VBoxContainer/Start" to="." method="_on_start_pressed"]
